crates/monitrs-tui/tests/snapshots/view_snapshots__stale_data_is_explained_on_the_inspect_screen.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU ~79% ~00:17 [#######################################################=--------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM ~71% ~00:17 [#################################################=--------------------]  ~23G/32G  swap 205M/2.0G  bat 82%-             ||
|+ SYSTEM -------------------------------------------------------------+ DIAGNOSTICS -------------------------------------------------------+|
||  host         dev-mbp                                               |PRESSURE                                                            ||
||  os           fake-os 1.0                                           |? CPU     needs a second sample      n/a                            ||
||  kernel       fake-kernel 1.0                                       |? MEM     needs a second sample      n/a                            ||
||  arch         aarch64                                               |? NET     link speed unknown       18M/s                            ||
||  uptime       3d 04:12 (booted 00:00:00Z)                           |? PSI-CPU warming up             warming                            ||
||  cpu          8 logical, 8 physical                                 |? PSI-MEM warming up             warming                            ||
||  cpu model    Fake CPU at 3200 MHz                                  |? PSI-IO  warming up             warming                            ||
||  memory       32 GiB total, swap 2.0 GiB                            |UNAVAILABLE METRICS                                                 ||
||  semantics    cross-platform baseline; c...r-byte comparable with it|  - CPU time breakdown      unsupported                             ||
||  cgroup limit n/a                                                   |  - swap activity           unsupported                             ||
||  environment  no container/VM evidence (heuristic, high confidenc...|  - disk busy               unsupported                             ||
||COLLECTOR                                                            |  - network link speed      unsupported                             ||
||  fast         not sampled yet                                       |  - Linux PSI               unsupported                             ||
||  medium       not sampled yet                                       |  - cgroup limits           unsupported                             ||
||  slow         not sampled yet                                       |  - process signals         unsupported                             ||
||  on demand    not sampled yet                                       |  - renice                  unsupported                             ||
||RENDER                                                               |STALE DATA                                                          ||
||  frames       1, 0 over budget                                      |  ~ cpu total               measured 00:17 ago                      ||
||  duration     last 4ms max 4ms p95 4ms of 16ms budget               |  ~ cpu per core            measured 00:17 ago                      ||
||  frame gap    n/a                                                   |  ~ memory usage            measured 00:17 ago                      ||
||OWN OVERHEAD                                                         |  ~ memory used             measured 00:17 ago                      ||
||  not measured yet                                                   |COLLECTOR ERRORS                                                    ||
|+ SELECTED PROCESS --------------------------------- 9 of 12 lines ---|  none recorded                                                     ||
||  identity     31842 (start key 900100)                              |NOTICES                                                             ||
||  name         rustc                                                 |  none                                                              ||
||  executable   /usr/bin/rustc                                        |SAMPLING                                                            ||
||  command      cargo build --release                                 |  interval     1s                                                   ||
||  state        sleeping                                              |  dropped      0                                                    ||
||  user         gabor                                                 |  coalesced    23                                                   ||
||  cpu          120%                                                  |  lag          0ms                                                  ||
||  memory       2.6G rss, 16G virt, 8.1% of total                     |  history      24 samples of 300, 179K                              ||
||  disk         21M/s read, 42M/s write (60G / 120G total)            |                                                                    ||
|+---------------------------------------------------------------------+--------------------------------------------------------------------+|
| 1 Overview  2 Processes  3 CPU  4 Storage  5 Network [6 Inspect] 7 Battery                                                 / filter  ? help|
