crates/monitrs-tui/tests/snapshots/view_snapshots__the_battery_screen_on_a_machine_with_no_battery.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU   79% [############################################################=---------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM   71% [#####################################################=----------------------]  23G/32G  swap 205M/2.0G                        ||
|+ BATTERY -------------------------------------------------------------------------------------------------- no battery on this machine ---+|
|| CHARGE   - n/a [............................................................................................]  no battery on this machine||
||                                                                                                                                          ||
|| A desktop, a server, a virtual machine and a container all read this way.                                                                ||
|| It is a fact about the hardware, not a failed read and not a charge of zero.                                                             ||
|+ THERMAL SENSORS ----------------------------------------------------------------------------------------------------------- 2 sensors ---+|
|| performance             62.5C  [###########=--------]  peak 95.0C  crit 105.0C                                                           ||
|| efficiency              44.0C  [########=-----------]  peak 95.0C  crit 105.0C                                                           ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview  2 Processes  3 CPU  4 Storage  5 Network  6 Inspect [7 Battery]                                                / filter  ? help|
