crates/monitrs-tui/tests/snapshots/view_snapshots__the_battery_screen_with_a_retained_reading.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU ~79% ~00:17 [#################################################=-------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C ~00:17||
|| MEM ~71% ~00:17 [############################################=------------------]  ~23G/32G  swap 205M/2.0G  bat 82%- ~00:17             ||
|+ BATTERY ------------------------------------------------------------------------------------------------------ 82% discharging ~00:17 ---+|
|| CHARGE   ~82% ~00:17 [##################################################################################------------------]  -discharging||
|| TO EMPTY 4h 00m         CYCLES   214            TEMP     31.4C          POWER    12.4 W                                                  ||
|| CAPACITY 48.2 Wh full of 52.6 Wh design        HEALTH   92%                                                                              ||
|+ THERMAL SENSORS ---------------------------------------------------------------------------------------------------- 2 sensors ~00:17 ---+|
|| performance             62.5C  [###########=--------]  peak 95.0C  crit 105.0C                                                           ||
|| efficiency              44.0C  [########=-----------]  peak 95.0C  crit 105.0C                                                           ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview  2 Processes  3 CPU  4 Storage  5 Network  6 Inspect [7 Battery]                                                / filter  ? help|
